# armake2

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml  build.rs
benches/: config.rs  preprocess.rs
images/alpine-3.10.2/: Dockerfile
images/debian-10.0-slim/: Dockerfile
src/: binarize.rs  config.rs  error.rs  io.rs  lib.rs  main.rs  p3d.rs  pbo.rs  preprocess.rs  preprocess_grammar.rustpeg  rapify.rs  run.rs  sign.rs
src/armake/: binarize.rs  config.rs  config_grammar.rustpeg  config_rapified.rustpeg  derapify.rs  error.rs  io.rs  mod.rs  p3d.rs  pbo.rs  preprocess.rs  preprocess_grammar.rustpeg  rapify.rs  sign.rs
src/commands/: binarize.rs  build.rs  cat.rs  derapify.rs  inspect.rs  mod.rs  pack.rs  preprocess.rs  rapify.rs  unpack.rs
src/commands/signing/: keygen.rs  mod.rs  sign.rs  verify.rs
src/pbo/: fs.rs  header.rs  mod.rs
src/preprocess/: fs.rs  mod.rs
src/signing/: mod.rs  private.rs  public.rs  signature.rs
tests/: config.rs  preprocess.rs
