[package]
name = "armake2"
version = "0.4.1"
description = "Arma 3 modding tools"
license = "GPL-2.0-or-later"
categories = ["command-line-utilities"]
authors = ["KoffeinFlummi <koffeinflummi@protonmail.com>", "Brett Mayson <brett@mayson.io>"]
homepage = "https://github.com/synixebrett/armake2"
repository = "https://github.com/synixebrett/armake2"
build = "build.rs"
readme = "README.md"
edition = "2018"

[lib]
name = "armake2"

[[bench]]
name = "preprocess"
harness = false

[[bench]]
name = "config"
harness = false

[dependencies]
log = "0.4"
byteorder = "1"
clap = "2.33"
sha-1 = "0.9"
docopt = "1"
linked-hash-map = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
time = "0.2"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12"
winreg = "0.7"

[build-dependencies]
peg = "0.5"

[dev-dependencies]
tempfile = "3"
criterion = "0.3"
